--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -70,31 +70,124 @@ set(
 # =======================================================================
 # create static and shared haru library
 # =======================================================================
-if(LIBHPDF_STATIC)
-  add_library(${LIBHPDF_NAME_STATIC} STATIC ${LIBHPDF_SRCS})
-  target_link_libraries(${LIBHPDF_NAME_STATIC} ${ADDITIONAL_LIBRARIES})
-  install(
-    TARGETS ${LIBHPDF_NAME_STATIC}
-    ARCHIVE DESTINATION lib
-    LIBRARY DESTINATION lib
-    RUNTIME DESTINATION bin
-  )
-  if(WIN32 AND NOT CYGWIN)
-		foreach(addlib ${ADDITIONAL_LIBRARIES})
-			install(FILES ${addlib} DESTINATION lib)
-		endforeach(addlib)
-  endif(WIN32 AND NOT CYGWIN)
-endif(LIBHPDF_STATIC)
+set(install_dir "bin")
+set(lib_install_dir "lib")
+set(extra_install_dir "lib")
+set(include_install_dir "include")
+set(top_install_dir "")
+if(WIN32)
+	set(install_dir "bin")
+	set(lib_install_dir "lib")
+	set(extra_install_dir "bin")
+	set(include_install_dir "include")
+	set(top_install_dir "")
+endif()
+
+set(targetName hpdf)
+add_library(${targetName} ${LIB_TYPE} ${LIBHPDF_SRCS})
+target_include_directories(${targetName}
+				PRIVATE
+				${libharu_SOURCE_DIR}/include
+)
+
+if( NOT LIBHPDF_BUILD_SHARED_LIBS AND MSVC)
+set_target_properties( ${targetName}
+	PROPERTIES
+	DEBUG_OUTPUT_NAME lib${targetName}
+	RELEASE_OUTPUT_NAME lib${targetName}  )
+endif()
+    #-- Set the Debug and Release names for the libraries
+set_target_properties( ${targetName}
+		PROPERTIES
+		DEBUG_POSTFIX _debug 
+		)
+if(LIBHPDF_BUILD_SHARED_LIBS)
+	if(APPLE)
+		# use, i.e. don't skip the full RPATH for the build tree
+		SET(CMAKE_SKIP_BUILD_RPATH  FALSE)
+
+		# when building, don't use the install RPATH already
+		# (but later on when installing)
+		SET(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
+
+		SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
+
+		# add the automatically determined parts of the RPATH
+		# which point to directories outside the build tree to the install RPATH
+		SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
+
+	endif(APPLE)
+	if(CMAKE_SYSTEM_NAME MATCHES "Linux")
+		set(CMAKE_INSTALL_RPATH "\$ORIGIN/../lib")
+		set_target_properties( ${targetName}
+							PROPERTIES
+							INSTALL_RPATH \$ORIGIN/../lib)
+	endif()
+
+endif( LIBHPDF_BUILD_SHARED_LIBS)
+
+target_link_libraries(hpdf ${ADDITIONAL_LIBRARIES})
+
+
+
+
+install(
+	TARGETS ${targetName}
+	COMPONENT Applications
+	EXPORT libharuTargets
+	ARCHIVE DESTINATION lib
+	LIBRARY DESTINATION lib
+	RUNTIME DESTINATION bin
+	BUNDLE DESTINATION "."
+)
+if(WIN32 AND NOT CYGWIN)
+	foreach(addlib ${ADDITIONAL_LIBRARIES})
+		install(FILES ${addlib} DESTINATION lib)
+	endforeach(addlib)
+endif(WIN32 AND NOT CYGWIN)
+
+
+include(CMakePackageConfigHelpers)
+
+write_basic_package_version_file(
+  "${CMAKE_CURRENT_BINARY_DIR}/libharu/libharuTargetsConfigVersion.cmake"
+  VERSION ${libharu_VERSION}
+  COMPATIBILITY AnyNewerVersion
+)
 if(LIBHPDF_SHARED)
-  add_library(${LIBHPDF_NAME} SHARED ${LIBHPDF_SRCS})
-  target_link_libraries(${LIBHPDF_NAME} ${ADDITIONAL_LIBRARIES})
-  if(WIN32 AND NOT CYGWIN)
-  	set_target_properties(${LIBHPDF_NAME} PROPERTIES DEFINE_SYMBOL HPDF_DLL_MAKE)
-  endif(WIN32 AND NOT CYGWIN)
-  install(
-    TARGETS ${LIBHPDF_NAME}
-    ARCHIVE DESTINATION lib
-    LIBRARY DESTINATION lib
-    RUNTIME DESTINATION bin
+  export(EXPORT libharuTargets
+    FILE "${CMAKE_CURRENT_BINARY_DIR}/libharu/libharuTargets.cmake"
+    NAMESPACE libharu::
   )
-endif(LIBHPDF_SHARED)
+endif()
+
+configure_file(cmake/libharuConfig.cmake
+  "${CMAKE_CURRENT_BINARY_DIR}/libharu/libharuConfig.cmake"
+  @ONLY
+)
+
+set(ConfigPackageLocation cmake/libharu)
+
+if(LIBHPDF_SHARED)
+  install(EXPORT libharuTargets
+    FILE
+			libharuTargets.cmake
+    NAMESPACE
+			libharu::
+    DESTINATION
+      ${ConfigPackageLocation}
+  )
+
+endif()
+
+install(
+  FILES
+    "${CMAKE_CURRENT_BINARY_DIR}/libharu/libharuConfig.cmake"
+    "${CMAKE_CURRENT_BINARY_DIR}/libharu/libharuTargetsConfigVersion.cmake"
+  DESTINATION
+    ${ConfigPackageLocation}
+  COMPONENT
+    Devel
+)
+
+
