--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -8,53 +8,51 @@ if(LIBHPDF_EXAMPLES)
   # =======================================================================
   # source file names and c flags
   # =======================================================================
-  set(
-    demos_NAMES
-    	character_map
-    	encoding_list
-    	encryption
-    	ext_gstate_demo
-    	font_demo
-    	image_demo
-    	jpeg_demo
-    	jpfont_demo
-    	line_demo
-    	link_annotation
-      make_rawimage
-    	outline_demo
-      #outline_demo_jp
-    	permission
-    	png_demo
-    	slide_show_demo
-    	text_annotation
-    	ttfont_demo
-    	ttfont_demo_jp
+  set(demos_NAMES
+    character_map
+    encoding_list
+    encryption
+    ext_gstate_demo
+    font_demo
+    image_demo
+    jpeg_demo
+    jpfont_demo
+    line_demo
+    link_annotation
+    make_rawimage
+    outline_demo
+    #outline_demo_jp
+    permission
+    png_demo
+    slide_show_demo
+    text_annotation
+    ttfont_demo
+    ttfont_demo_jp
   )
 
-  set(
-    demos_with_grid_NAMES
-    	arc_demo
-      chfont_demo
-    	raw_image_demo
-    	text_demo
-    	text_demo2
+  set(demos_with_grid_NAMES
+    arc_demo
+    chfont_demo
+    raw_image_demo
+    text_demo
+    text_demo2
   )
 
   # we need to add some definitions for win 32
   set(DEMO_C_FLAGS)
   if(WIN32 AND NOT CYGWIN)
     set(DEMO_C_FLAGS "-D__WIN32__")
-  endif(WIN32 AND NOT CYGWIN)
+  endif()
 
   # link the examples to the shared library otherwise to the static
   if(LIBHPDF_SHARED)
     set(_LIBHPDF_LIB ${LIBHPDF_NAME})
     if(WIN32 AND NOT CYGWIN)
       set(DEMO_C_FLAGS "${DEMO_C_FLAGS} -DHPDF_DLL")
-    endif(WIN32 AND NOT CYGWIN)
-  else(LIBHPDF_SHARED)
+    endif()
+  else()
     set(_LIBHPDF_LIB ${LIBHPDF_NAME_STATIC})
-  endif(LIBHPDF_SHARED)
+  endif()
   
   # =======================================================================
   # create demos
@@ -64,8 +62,8 @@ if(LIBHPDF_EXAMPLES)
     target_link_libraries(${demo} ${_LIBHPDF_LIB})
     if(DEMO_C_FLAGS)
       set_target_properties(${demo} PROPERTIES COMPILE_FLAGS ${DEMO_C_FLAGS})
-    endif(DEMO_C_FLAGS)
-  endforeach(demo)
+    endif()
+  endforeach()
     
   # some demos need grid_sheet.c compiled in
   foreach(demo ${demos_with_grid_NAMES})
@@ -73,8 +71,8 @@ if(LIBHPDF_EXAMPLES)
     target_link_libraries(${demo} ${_LIBHPDF_LIB})
     if(DEMO_C_FLAGS)
       set_target_properties(${demo} PROPERTIES COMPILE_FLAGS ${DEMO_C_FLAGS})
-    endif(DEMO_C_FLAGS)
-  endforeach(demo)
+    endif()
+  endforeach()
     
   # the grid_sheet demo needs extra defines
   add_executable(grid_sheet grid_sheet.c)
@@ -97,4 +95,4 @@ if(LIBHPDF_EXAMPLES)
     DIRECTORY images mbtext pngsuite rawimage ttfont type1
     DESTINATION demo
   )
-endif(LIBHPDF_EXAMPLES)
+endif()
