Fixed bug with install failing when using additional libraries
* zlib has debug and optimized keywords in its library variable on Windows
separated by spaces. The foreach loops then tries to install debug and
optimized which fail as they are keywords for target_link_libraries() not
actual libraries
* Installation with specifically with libharu is not necessary

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -146,11 +146,11 @@ install(
   BUNDLE DESTINATION "."
 )
 
-if(WIN32 AND NOT CYGWIN)
-  foreach(addlib ${ADDITIONAL_LIBRARIES})
-    install(FILES ${addlib} DESTINATION lib)
-  endforeach()
-endif()
+# if(WIN32 AND NOT CYGWIN)
+#   foreach(addlib ${ADDITIONAL_LIBRARIES})
+#     install(FILES ${addlib} DESTINATION lib)
+#   endforeach()
+# endif()
 
 include(CMakePackageConfigHelpers)
 
